# server

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  mkdocs.yml  pyproject.toml
.github/workflows/: ContractTest.yml  PackageRelease.yml  PackageTest.yml
docs/: _index.md  api.md  cli.md  orm.md  settings.md
egon_server/: __init__.py  __main__.py  api.py  auth.py  cli.py  orm.py  settings.py
egon_server/migrations/: 0_1.py  env.py  script.py.mako
egon_server/migrations/versions/: 0_1.py
egon_server/resources/: __init__.py  common.py  v1.py
tests/: placeholder.py
tests/auth/: test_User.py
tests/cli/: test_Parser.py
tests/settings/: test_Settings.py
