[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "egon-server"
version = "0.0.0"  # Version is set dynamically by the CI tool on publication
authors = ["Daniel Perrefort", ]
readme = "README.md"
description = "The Egon server."
homepage = "https://github.com/Egon-Framework/status-server"
repository = "https://github.com/Egon-Framework/status-server"
documentation = "https://github.com/Egon-Framework/status-server"
keywords = ["egon", "egon-framework", "status", "server", "api"]
classifiers = [
]

[tool.poetry.scripts]
egon-server = "egon_server.__main__:main"

[tool.poetry.dependencies]
python = "3.11"
