[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "egon-server"
version = "0.0.0"  # Version is set dynamically by the CI tool on publication
authors = ["Daniel Perrefort", ]
readme = "README.md"
description = "The Egon server."
homepage = "https://github.com/Egon-Framework/status-server"
repository = "https://github.com/Egon-Framework/status-server"
documentation = "https://github.com/Egon-Framework/status-server"
keywords = ["egon", "egon-framework", "status", "server", "api"]
classifiers = [
]

[tool.poetry.scripts]
egon-server = "egon_server.__main__:main"

[tool.poetry.dependencies]
python = "3.11"
flask = "^2.2.3"
flask-restful = "^0.3.9"
flask-sqlalchemy = "^3.0.3"
flask-alembic = "^2.0.1"
waitress = "^2.1.2"
sqlalchemy = "^2.0.4"
pydantic = "^1.10.5"
psycopg2-binary = "^2.9.5"
