[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "egon-server"
version = "0.0.0"  # Version is set dynamically by the CI tool on publication
authors = ["Daniel Perrefort", ]
readme = "README.md"
description = "The Egon server."
homepage = "https://github.com/Egon-Framework/status-server"
repository = "https://github.com/Egon-Framework/status-server"
documentation = "https://github.com/Egon-Framework/status-server"
keywords = ["egon", "egon-framework", "status", "server", "api"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Typing :: Typed"
]

[tool.poetry.scripts]
egon-server = "egon_server.__main__:main"

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^2.0.4"
pydantic = "^1.10.5"
asyncpg = "^0.27.0"
fastapi-restful = "^0.4.3"
fastapi = "^0.95.1"
uvicorn = "^0.20.0"
alembic = "^1.9.4"
requests = "^2.28.2"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
coverage = "*"
